--- a/frontend-cemos/public/assets/content/estrategia/3-ema-310/script/2c.md
+++ b/frontend-cemos/public/assets/content/estrategia/3-ema-310/script/2c.md
@@ -13,9 +13,9 @@ Coluna B: lista de definições, teorias, características ou fatos corresponden
 
 Preenchimento dos campos:
 
-bibliografia_titulo: "Portaria Normativa nº 84/GM-MD 2º Vol"
+bibliografia_id: 35
 paginas será preenchido com o markador ## referente a página ex: se ## Página 11 então 'Pág 11 ...'
-“assunto” será preenchido com 'Cap. V - Exame de Situação Operacional'.
+“assunto” será preenchido com 158.
 pergunta: comando de associação (ex.: Relacione os autores às suas teorias).
 coluna_a: lista JSON.
 coluna_b: lista JSON.
@@ -26,11 +26,10 @@ ano_prova deve ser branco.
 
 O resultado final deve ser em formato Markdown, no padrão de tabela:
 
-| bibliografia_titulo | paginas | assunto | pergunta | coluna_a | coluna_b | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
+| bibliografia_id | paginas | assunto | pergunta | coluna_a | coluna_b | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
 |---|---|---|---|---|---|---|---|---|
 
 por exemplo:
 
-| bibliografia_titulo | paginas | assunto | pergunta | coluna_a | coluna_b | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
-| EMA-135 | Pág. 11 | Cap. 5 | Relacione os conceitos geopolíticos com seus autores correspondentes. | ["Heartland", "Eurasianismo", "Destino Manifesto Russo"] | ["Mackinder", "Dugin", "March"] | {"0": "0", "1": "1", "2": "2"} | Cada conceito está corretamente associado ao pensador que o desenvolveu ou aplicou à Rússia. |  |  |
-
+| bibliografia_id | paginas | assunto | pergunta | coluna_a | coluna_b | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
+| 35| Pág. 11 | 158 | Relacione os conceitos geopolíticos com seus autores correspondentes. | ["Heartland", "Eurasianismo", "Destino Manifesto Russo"] | ["Mackinder", "Dugin", "March"] | {"0": "0", "1": "1", "2": "2"} | Cada conceito está corretamente associado ao pensador que o desenvolveu ou aplicou à Rússia. |  |  |
