--- a/frontend-cemos/public/assets/content/estrategia/3-ema-310/script/c1.md
+++ b/frontend-cemos/public/assets/content/estrategia/3-ema-310/script/c1.md
@@ -1,6 +1,10 @@
-| bibliografia_titulo | paginas | assunto | pergunta | coluna_a | coluna_b | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
+| bibliografia_id | paginas | assunto | pergunta | coluna_a | coluna_b | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
 |---|---|---|---|---|---|---|---|---|---|
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág. 37 | Cap. IV - Processo de Planejamento Conjunto (PPC) | Relacione as etapas do processo de planejamento às suas respectivas finalidades e características. | ["Etapa 1: Exame de Situação Operacional", "Etapa 2: Elaboração de Planos e Ordens", "Etapa 3: Controle da Operação Planejada"] | ["O Comandante verifica se a operação segue o planejado e introduz alterações se necessário.", "Estudo do problema em todas as dimensões, resultando na escolha de uma Linha de Ação (LA).", "Desenvolvimento do Conceito da Operação e produção de documentos para transmissão de ordens."] | {"0": "1", "1": "2", "2": "0"} | A Etapa 1 foca no estudo do problema e escolha da LA. A Etapa 2 foca no desenvolvimento do conceito e documentos. A Etapa 3 foca na verificação e ajustes da execução. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág. 36 | Cap. IV - Processo de Planejamento Conjunto (PPC) | Associe as características do Processo de Planejamento Conjunto (PPC) às suas descrições. | ["Flexibilidade", "Natureza Cíclica", "Caráter Contínuo"] | ["Possibilidade de retornar a partes anteriores para rever aspectos ou analisar novos dados.", "Nenhuma parte é definitiva até que a missão esteja integralmente cumprida.", "Possibilita o emprego na resolução de qualquer tipo de problema militar e graus de complexidade."] | {"0": "2", "1": "0", "2": "1"} | O PPC é flexível para resolver diversos problemas; cíclico pois permite revisão de etapas anteriores; e contínuo pois as partes não são definitivas até o fim da missão. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág. 36 | Cap. IV - Processo de Planejamento Conjunto (PPC) | Correlacione os níveis e tipos de força com a metodologia de planejamento adequada. | ["Forças Componentes Singulares (Nível Tático)", "Forças Conjuntas (Nível de Força Componente)", "Plano Operacional (Nível Operacional)"] | ["Adotam a mesma metodologia aplicável ao nível operacional (PPC).", "Estabelece prioridades, organiza meios e atribui tarefas para alcançar o EFD Operacional.", "Utilizam metodologias peculiares, desde que complementares aos níveis mais elevados."] | {"0": "2", "1": "0", "2": "1"} | Forças singulares usam metodologias próprias; Forças conjuntas adotam o PPC; O Plano Operacional é o produto onde se estabelecem prioridades e tarefas. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág. 35 | Cap. IV - Processo de Planejamento Conjunto (PPC) | Relacione os conceitos fundamentais do planejamento conjunto às suas definições ou responsabilidades. | ["Gerenciamento do Risco Operacional (GRO)", "Estado Final Desejado (EFD) Operacional", "Matriz de Três Colunas"] | ["Responsabilidade do Comandante Operacional, baseada na análise racional dos fatos.", "Ferramenta de auxílio (fato, dedução e conclusão) utilizada em todas as etapas.", "Ferramenta para analisar e gerenciar a combinação de probabilidade e gravidade de danos."] | {"0": "2", "1": "0", "2": "1"} | O GRO lida com riscos e incertezas; O EFD é responsabilidade do Cmt Op; A Matriz de Três Colunas auxilia o planejamento. | | |
+| 35 | Pág. 9 | 157 | Relacione os elementos da dinâmica estratégica (FINS-MANEIRAS-MEIOS) aos seus correspondentes no Conceito Estratégico da Marinha. | ["FINS (ENDS)", "MANEIRAS (WAYS)", "MEIOS (MEANS)"] | ["Posturas Estratégicas", "Capacidades Estratégicas", "Objetivos Estratégicos"] | {"0": "2", "1": "0", "2": "1"} | De acordo com a dinâmica estratégica apresentada: os FINS associam-se aos Objetivos Estratégicos; as MANEIRAS às Posturas Estratégicas; e os MEIOS às Capacidades Estratégicas. | | |
+| 35 | Pág. 10 | 157 | Associe os Objetivos Estratégicos (OBE) da Marinha às suas respectivas descrições ou focos principais. | ["OBE 1", "OBE 3", "OBE 4"] | ["Garantir o tráfego marítimo vital e a proteção da carga transportada", "Sobrepujar as ameaças estatais aos interesses nacionais", "Proteger as Infraestruturas Críticas do Poder Marítimo (ICPM)"] | {"0": "1", "1": "2", "2": "0"} | O OBE 1 foca em sobrepujar ameaças estatais; o OBE 3 foca na proteção das ICPM como portos e plataformas; o OBE 4 visa preservar as Linhas de Comunicação Marítimas (LCM) e o tráfego vital. | | |
+| 35 | Pág. 13-14 | 157 | Relacione as Posturas Estratégicas adotadas pela Marinha do Brasil às suas definições conceituais. | ["Persuasão", "Cooperação", "Coerção"] | ["Uso majoritário de recursos de ameaça do uso da força para desencorajar o antagonista", "Predomínio do uso do diálogo e da força do argumento", "Apoio a outra Força ou órgão em situação específica, permitindo concessões"] | {"0": "1", "1": "2", "2": "0"} | A Persuasão busca objetivos com a força do argumento; a Cooperação caracteriza-se pelo apoio a outra força ou órgão; a Coerção usa a ameaça do uso da força para influenciar o custo-benefício do antagonista. | | |
+| 35 | Pág. 15 | 157 | Associe os Campos de Atuação ou áreas geográficas à Postura Estratégica predominante recomendada no texto. | ["Defesa Naval na Amazônia Azul", "Diplomacia Naval (Fóruns de interesse)", "Apoio às Ações do Estado"] | ["Postura Cooperativa", "Postura Coercitiva", "Postura Persuasiva"] | {"0": "1", "1": "2", "2": "0"} | Na Defesa Naval na Amazônia Azul, a postura deve ser Coercitiva; na Diplomacia Naval, a postura deve ser Persuasiva nos fóruns de interesse; no Apoio às Ações do Estado, a postura deve ser Cooperativa. | | |
+| 35 | Pág. 16-17 | 157 | Correlacione as siglas das Prioridades Estratégicas aos exemplos de ações ou focos descritos no documento. | ["Prioridade DEF (Defesa Naval)", "Prioridade SMA (Segurança Marítima)", "Prioridade DIP (Diplomacia Naval)"] | ["Influenciar nas questões marítimas afetas ao Golfo da Guiné", "Ampliar a cooperação com o Exército Brasileiro (EB) nas áreas de fronteira", "Ampliar a consciência situacional nas LCF da Bacia Amazônica"] | {"0": "1", "1": "2", "2": "0"} | As prioridades de Defesa (DEF) incluem ampliar cooperação com o EB (DEF2); as de Segurança Marítima (SMA) incluem ampliar consciência situacional nas LCF (SMA1); as de Diplomacia (DIP) incluem influenciar no Golfo da Guiné (DIP1). | | |
+| 35 | Pág. 18 | 157 | Relacione a classificação de risco identificada na Análise de Risco aos eventos descritos. | ["Risco Crítico", "Risco Elevado", "Risco Baixo"] | ["Desalinhamento da Diplomacia Naval com a Política Externa", "Interrupção do Projeto Estratégico do SCPN", "Incapacidade de prover Apoio Logístico adequado aos meios da Força Naval"] | {"0": "1", "1": "2", "2": "0"} | A interrupção do SCPN é classificada como Risco Crítico (R3); a incapacidade de prover Apoio Logístico é Risco Elevado (R8); o desalinhamento da Diplomacia Naval é Risco Baixo (R13). | | |
+| 35 | Pág. 11, 26 | 157 | Associe os Objetivos Estratégicos específicos aos seus contextos de atuação detalhados. | ["OBE 8 (Setor Nuclear)", "OBE 10 (Diplomacia Naval)", "OBE 11 (Antártica)"] | ["Apoio logístico às pesquisas e postura cooperativa na região", "Desenvolvimento do submarino convencionalmente armado com propulsão nuclear", "Promoção do Poder Nacional no exterior apoiando a Política Externa"] | {"0": "1", "1": "2", "2": "0"} | O OBE 8 foca no desenvolvimento do setor nuclear e do SCPN; o OBE 10 trata da Diplomacia Naval e apoio à Política Externa; o OBE 11 foca na defesa dos interesses na Antártica com apoio à pesquisa. | | |
+| 35 | Pág. 24-25 | 157 | Relacione as áreas operacionais ou funções às posturas e ações específicas descritas para a execução do Conceito Estratégico. | ["Bacia Platina (Hidrovia Paraguai-Paraná)", "Segurança da Navegação (Autoridade Marítima)", "Busca e Salvamento (SAR)"] | ["Aproveitamento da capilaridade das Capitanias até 50 MN da costa", "Adoção de Postura Coercitiva visando preservar as LCF", "Normatização, fiscalização e estabelecimento de auxílios à navegação"] | {"0": "1", "1": "2", "2": "0"} | Na Bacia Platina, adota-se Postura Coercitiva para preservar as LCF; a Segurança da Navegação envolve normatização e fiscalização; para SAR, utiliza-se a capilaridade das Capitanias para eventos até 50 MN. | | |
