--- a/frontend-cemos/public/assets/content/estrategia/3-ema-310/script/c2.md
+++ b/frontend-cemos/public/assets/content/estrategia/3-ema-310/script/c2.md
@@ -1,6 +1,7 @@
-| bibliografia_titulo | paginas | assunto | pergunta | coluna_a | coluna_b | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
+| bibliografia_id | paginas | assunto | pergunta | coluna_a | coluna_b | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
 |---|---|---|---|---|---|---|---|---|---|
-| Portaria Normativa nº 84/GM-MD 2º Vol | Página 21 | Cap. II - Planejamento para Operações Conjuntas | Relacione os níveis de planejamento do Ministério da Defesa (MD) aos processos ou metodologias correspondentes. | ["Nível Estratégico", "Nível Operacional", "Nível Tático (Forças Singulares)"] | ["Utilizam-se metodologias de planejamento próprias de cada Força Armada.", "Processo de Planejamento Estratégico Conjunto (PPEC).", "Processo de Planejamento Conjunto (PPC)."] | {"0": "1", "1": "2", "2": "0"} | No nível estratégico, aplica-se o PPEC. No nível operacional, utiliza-se o PPC. No nível tático, quando as forças componentes forem singulares, utilizam-se metodologias próprias de cada Força. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Página 21 | Cap. II - Planejamento para Operações Conjuntas | Associe os produtos finais e responsabilidades aos seus respectivos processos e níveis de decisão. | ["PEECFA", "Plano Operacional do Comando constituído", "Chefe do Estado-Maior Conjunto das Forças Armadas"] | ["Responsável pela aplicação do PPEC no nível estratégico.", "Produto final do Processo de Planejamento Conjunto (PPC).", "Produto final do Processo de Planejamento Estratégico Conjunto (PPEC)."] | {"0": "2", "1": "1", "2": "0"} | O produto final do PPEC é o PEECFA. O produto final do PPC é o Plano Operacional do Comando constituído. A aplicação do PPEC é responsabilidade do Chefe do Estado-Maior Conjunto das Forças Armadas. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Página 21 | Cap. II - Planejamento para Operações Conjuntas | Correlacione as características do planejamento no nível tático e a integração entre metodologias. | ["Forças componentes conjuntas (Nível Tático)", "Forças componentes singulares (Nível Tático)", "Metodologias singulares"] | ["Devem ser complementares e jamais conflitantes com os níveis mais elevados.", "Utilizam a metodologia do Processo de Planejamento Conjunto (PPC).", "Utilizam metodologias de planejamento próprias devido às especificidades."] | {"0": "1", "1": "2", "2": "0"} | No nível tático, forças componentes conjuntas usam o PPC. Forças singulares usam metodologias próprias. Tais metodologias devem ser complementares e não conflitantes com as utilizadas nos níveis mais elevados. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Página 21 | Cap. II - Planejamento para Operações Conjuntas | Relacione os elementos fundamentais do planejamento militar às suas descrições ou finalidades. | ["Finalidade do planejamento", "Base para execução", "Processos de planejamento"] | ["Dados confiáveis, atualizados, flexibilidade e abrangência.", "Ferramenta útil baseada na experiência, criatividade e capacidade de decisão.", "Cumprimento da missão de forma eficiente e obtenção do estado final desejado."] | {"0": "2", "1": "0", "2": "1"} | A finalidade real é o cumprimento da missão e o estado final desejado. O sucesso repousa em planejamento baseado em dados confiáveis e flexibilidade. Os processos constituem uma ferramenta útil que não prescinde da experiência e criatividade dos envolvidos. | | |
+| 35 | Pág. 30 | 158 | Relacione os conceitos de Preparo, Emprego e Capacidade às suas respectivas definições ou características no nível estratégico. | ["Diretrizes Estratégicas de Preparo", "Diretrizes Estratégicas de Emprego", "Conceito de Capacidade"] | ["Orientações sobre o uso efetivo de capacidades existentes com atributos atendidos", "Materializada plenamente apenas quando todos os atributos DOPEMAI são atendidos", "Visam restabelecer capacidade degradada ou conceber e desenvolver nova capacidade"] | {"0": "2", "1": "0", "2": "1"} | As Diretrizes de Preparo focam em restabelecer ou criar capacidades; as de Emprego focam no uso de capacidades existentes; e a Capacidade depende do atendimento dos atributos DOPEMAI. | | |
+| 35 | Pág. 31 | 158 | Associe os Eixos Temáticos e atributos às suas composições ou exemplos descritos nas Linhas de Esforço do Preparo. | ["Eixo Poder de Combate", "Eixo Consciência Situacional", "Atributos da Capacidade"] | ["SisGAAz, Meios de IVR e Capacidade Cibernética", "Doutrina, Organização, Pessoal, Educação, Material, Adestramento e Infraestrutura", "Navios, Submarinos, Meios de Minagem e Conectores do MNT"] | {"0": "2", "1": "0", "2": "1"} | O Poder de Combate inclui navios, submarinos e minagem; a Consciência Situacional inclui SisGAAz e IVR; os atributos da capacidade são resumidos pelo acrônimo DOPEMAI. | | |
+| 35 | Pág. 31-32 | 158 | Relacione os meios ou capacidades específicas aos objetivos estratégicos ou funções para os quais são fundamentais. | ["SCPN (Submarino Nuclear)", "Capacidade de Minagem e CMM", "Conectores do MNT"] | ["Manifestação do poder de combate sobre uma área terrestre de interesse", "Materialização do Poder de Combate necessário para adotar a Postura Coercitiva", "Defesa e proteção de infraestruturas críticas portuárias (Poder Econômico)"] | {"0": "1", "1": "2", "2": "0"} | O SCPN materializa o poder para a Postura Coercitiva; Minagem e CMM são essenciais para proteção de portos; Conectores do MNT permitem manifestar poder sobre área terrestre. | | |
+| 35 | Pág. 35 | 158 | Associe as cooperações institucionais (sinergia) aos focos de atuação para otimizar o emprego dos meios atuais. | ["Cooperação com o Exército (EB)", "Cooperação com a Força Aérea (FAB)", "Cooperação com o CENSIPAM"] | ["Ampliação da atuação em suas respectivas áreas de cobertura", "Foco na consciência situacional nas áreas ribeirinhas (Bacias Amazônica/Platina)", "Foco nos meios aéreos e espaciais de IVR na Amazônia Azul"] | {"0": "1", "1": "2", "2": "0"} | A cooperação com o EB foca nas áreas ribeirinhas; com a FAB foca em meios aéreos/espaciais na Amazônia Azul; e com o CENSIPAM em suas áreas de cobertura. | | |
+| 35 | Pág. 35-36 | 158 | Relacione os temas operacionais às orientações estratégicas específicas para seu dimensionamento ou condução. | ["Defesa de Ilhas Oceânicas", "Apoio à Defesa Civil e GLO", "Relações Internacionais (Entorno Estratégico)"] | ["Incremento da inserção no Golfo da Guiné em apoio ao fortalecimento da ZOPACAS", "Inserção nas Operações Correntes como recurso de aprestamento (enquanto não há arquitetura definida)", "Atendimento com capacidades já existentes, sem dimensionamento específico de Força"] | {"0": "1", "1": "2", "2": "0"} | Ilhas Oceânicas usam operações correntes para aprestamento; GLO/Defesa Civil usam capacidades existentes sem novo dimensionamento; Relações Internacionais focam no Golfo da Guiné/ZOPACAS. | | |
