--- a/frontend-cemos/public/assets/content/estrategia/3-ema-310/script/c3.md
+++ b/frontend-cemos/public/assets/content/estrategia/3-ema-310/script/c3.md
@@ -1,7 +1,6 @@
-| bibliografia_titulo | paginas | assunto | pergunta | coluna_a | coluna_b | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
+| bibliografia_id | paginas | assunto | pergunta | coluna_a | coluna_b | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
 |---|---|---|---|---|---|---|---|---|---|
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág. 39 | Cap. V - Exame de Situação Operacional | Relacione as fases do Exame de Situação Operacional às suas descrições correspondentes. | ["Fase 1: Avaliação do Ambiente e Análise da Missão", "Fase 3: Psb Ini, LA e Confronto", "Fase 6: Conceito Preliminar da Operação (CPO)"] | ["Elaboração e comparação das possíveis soluções (jogo da guerra).", "Elaboração de uma ideia geral sobre como a decisão será implementada.", "Reconhecimento da existência e definição do problema militar."] | {"0": "2", "1": "0", "2": "1"} | A Fase 1 corresponde à definição do problema (item 5.1.5); a Fase 3 envolve a elaboração e comparação de soluções (item 5.1.5); a Fase 6 trata da ideia geral de implementação (item 5.1.5). | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág. 61 e 62 | Cap. V - Exame de Situação Operacional | Associe os critérios da Prova Preliminar de APA (Adequabilidade, Praticabilidade e Aceitabilidade) às suas definições. | ["Adequabilidade", "Praticabilidade", "Aceitabilidade"] | ["Avalia se pode ser implementada com as forças e apoio disponíveis.", "Verifica se os prováveis resultados compensam os riscos e custos estimados.", "Verifica se a LA pode cumprir a Missão e atingir o EFD Operacional."] | {"0": "2", "1": "0", "2": "1"} | Adequabilidade refere-se ao cumprimento da missão (item 5.4.3.6.2); Praticabilidade refere-se à implementação com meios disponíveis (item 5.4.3.6.5); Aceitabilidade refere-se ao balanço risco/benefício (item 5.4.3.6.6). | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág. 46 e 47 | Cap. V - Exame de Situação Operacional | Relacione os elementos da análise da missão às suas definições conceituais. | ["Premissa Básica", "Limitações ao Planejamento", "Estado Final Desejado Operacional (EFD Op)"] | ["Descrição das condições que permitem assumir a missão como cumprida.", "Condicionantes impostas pelo nível superior ('o que não pode' e 'o que deve' ser feito).", "Suposição sobre o futuro que substitui informações ainda não disponíveis."] | {"0": "2", "1": "1", "2": "0"} | Premissa Básica substitui informações ausentes (item 5.2.4.3.c); Limitações são condicionantes impostas (item 5.2.4.4.1); EFD Op descreve condições de missão cumprida (item 5.2.3.5). | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág. 63 | Cap. V - Exame de Situação Operacional | Correlacione as funções desempenhadas durante o Confronto (Jogo da Guerra) às suas responsabilidades. | ["Árbitro", "Coordenador", "Grupo de Assessoria"] | ["Define as regras e o método para a condução do Confronto.", "Aponta impropriedades doutrinárias e contribui com expertises.", "Decide sobre os aperfeiçoamentos ou eliminação de uma Linha de Ação."] | {"0": "2", "1": "0", "2": "1"} | O Árbitro decide sobre aperfeiçoamentos (item 5.4.4.3.3); O Coordenador define regras e método (item 5.4.4.3.5); O Grupo de Assessoria aponta impropriedades (item 5.4.4.3.4). | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág. 48 | Cap. V - Exame de Situação Operacional | Associe os preceitos do método cartesiano utilizados na análise de Fatores de Força e Fraqueza. | ["Evidência", "Análise", "Síntese"] | ["Divisão das dificuldades em partes para resolvê-las uma a uma.", "Consolidação das conclusões nos Fatores de Força e Fraqueza.", "Aceitação apenas do que é claro e indiscutível."] | {"0": "2", "1": "0", "2": "1"} | Evidência é aceitar apenas o claro (item 5.3.3.2.a); Análise é a divisão das dificuldades (item 5.3.3.2.b); Síntese é a consolidação (item 5.3.3.2.d). | | |
+| 35 | Pág. 39-44 | 159 | Relacione os Elementos de Força aos efeitos estratégicos que são capazes de atingir, conforme o dimensionamento proposto. | ["Força de Intervenção Marítima", "Força de Proteção Marítima", "Força de Projeção"] | ["Defender/Retomar Ilhas Oceânicas e neutralizar alvos em terra", "Controle de Área Marítima de Interesse (ex: Foz do Amazonas) e Proteção de LCM", "Repressão à exploração não autorizada na Amazônia Azul e proteção de ICPM"] | {"0": "1", "1": "2", "2": "0"} | A Força de Intervenção foca no controle de áreas e proteção de LCM; a Força de Proteção foca na repressão a ilícitos e proteção de ICPM; a Força de Projeção foca na defesa/retomada de ilhas e neutralização de alvos em terra. | | |
+| 35 | Pág. 37-38 | 159 | Associe as categorias de classificação dos Elementos de Força (dimensionados, não dimensionados e definição) aos seus exemplos ou conceitos. | ["Elementos de Força Dimensionados", "Elementos de Força Não Dimensionados", "Conceito de Elemento de Força"] | ["Conjunto de meios e sistemas doutrinariamente organizados para atingir um efeito", "Força de Intervenção Marítima, Força C5IVR e Força de Desgaste", "Força Ribeirinha, Força de Busca e Salvamento e Força de Diplomacia Naval"] | {"0": "1", "1": "2", "2": "0"} | Os Elementos Dimensionados incluem Intervenção e C5IVR; os Não Dimensionados incluem Ribeirinha e SAR; o conceito refere-se ao conjunto de meios que atingem um efeito. | | |
+| 35 | Pág. 41-43 | 159 | Relacione os Elementos de Força às suas capacidades específicas ou efeitos de negação/interrupção descritos. | ["Força de Guerra de Minas", "Força de Desgaste", "Força de Serviços Hidroceanográficos"] | ["Cumprimento de compromissos da vertente safety da Segurança Marítima", "Negação do uso de Área Marítima de Interesse via minagem defensiva", "Interrupção de Linhas de Comunicação Marítimas em porto no entorno estratégico"] | {"0": "1", "1": "2", "2": "0"} | A Força de Guerra de Minas atua na negação via minagem defensiva; a Força de Desgaste busca interromper LCM no entorno estratégico; a Força Hidroceanográfica atua na vertente safety. | | |
+| 35 | Pág. 42-48 | 159 | Associe os sistemas ou Forças de apoio às suas funções primárias descritas no dimensionamento. | ["Sistema SisGAAz (Força C5IVR)", "Força Logística de Combate", "Força de Apoio à Pesquisa Antártica"] | ["Apoiar as Forças de Intervenção, Projeção e Desgaste em seus propósitos", "Contribuir para a relevância do país nos comitês científicos ligados ao tema", "Vigilância e monitoramento ativo em áreas como a Elevação do Rio Grande e Foz do Amazonas"] | {"0": "2", "1": "0", "2": "1"} | O SisGAAz realiza vigilância e monitoramento; a Força Logística apoia as forças de combate (Intervenção, Projeção, Desgaste); a Força Antártica apoia a pesquisa e relevância científica. | | |
