--- a/frontend-cemos/public/assets/content/estrategia/3-ema-310/script/m2.md
+++ b/frontend-cemos/public/assets/content/estrategia/3-ema-310/script/m2.md
@@ -1,3 +1,10 @@
-| bibliografia_titulo | paginas | assunto | pergunta | alternativa_a | alternativa_b | alternativa_c | alternativa_d | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
+| bibliografia_id | paginas | assunto | pergunta | alternativa_a | alternativa_b | alternativa_c | alternativa_d | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
 |---|---|---|---|---|---|---|---|---|---|---|---|
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 21 | Cap. II - Planejamento para Operações Conjuntas | De acordo com a sistemática de planejamento do Ministério da Defesa, como se dá a aplicação das metodologias de planejamento no nível tático? | Utiliza-se exclusivamente o Processo de Planejamento Estratégico Conjunto (PPEC) para garantir a unicidade de comando, independentemente da natureza das forças componentes. | Para forças componentes conjuntas, aplica-se a metodologia do Processo de Planejamento Conjunto (PPC), enquanto forças componentes singulares utilizam metodologias próprias, desde que complementares aos níveis superiores. | As metodologias singulares de cada Força Armada são vedadas no nível tático em operações conjuntas, devendo ser substituídas integralmente pelo Plano Operacional do Comando constituído. | O planejamento tático prescinde de processos formais, baseando-se unicamente na experiência e criatividade dos comandantes para lidar com a incerteza do combate. | b | Conforme o **item 2.1.2.3**, no nível tático, utiliza-se o PPC para forças conjuntas e metodologias próprias para forças singulares, sendo que estas devem ser complementares e jamais conflitantes com os níveis mais elevados. | | |
+| 35 | Pág 29 | 158 | De acordo com as Definições do Capítulo 2, qual é a função das Diretrizes Estratégicas de Preparo e Emprego em relação ao Conceito Estratégico e ao Dimensionamento de Força? | Elas servem para substituir o Plano de Configuração de Força (PCF), tornando-o obsoleto. | Elas realizam a conexão entre o Conceito Estratégico e o Dimensionamento de Força, orientando a elaboração do Plano de Configuração de Força (PCF). | Elas definem exclusivamente o orçamento anual da Marinha, sem relação com o emprego operacional. | Elas são documentos autônomos que não dependem da Missão da MB, focando apenas na aquisição de material. | b | Conforme o **item 2.1**, as Diretrizes realizam a conexão entre o Conceito Estratégico e o Dimensionamento de Força, apontando metas para o PCF. | | |
+| 35 | Pág 30 | 158 | O conceito de "capacidade" é central nas definições de Preparo e Emprego. Segundo o texto, quando uma capacidade é considerada plenamente materializada? | Quando os meios navais são adquiridos, independentemente do treinamento da tripulação. | Quando o atributo "Material" é atendido, dispensando-se a infraestrutura em terra. | Quando todos os seus atributos (DOPEMAI — Doutrina, Organização, Pessoal, Educação, Material, Adestramento e Infraestrutura) são atendidos. | Quando existe uma diretriz política autorizando seu uso, mesmo sem doutrina consolidada. | c | Conforme o **item 2.1 (Pág. 30)**, a capacidade só é plenamente materializada quando todos os seus atributos (DOPEMAI) são atendidos. | | |
+| 35 | Pág 31 | 158 | No contexto do Poder de Combate, qual é a justificativa estratégica para a consolidação da escolha do Submarino Convencionalmente Armado de Propulsão Nuclear (SCPN)? | A necessidade de realizar apenas patrulhas costeiras em águas rasas, onde a propulsão nuclear é mais eficiente. | A materialização do Poder de Combate necessário para se adotar a Postura Coercitiva, contrapondo-se aos desafios identificados. | O foco exclusivo em missões de paz e ajuda humanitária, onde o SCPN atua como plataforma de apoio logístico. | A substituição completa dos meios de superfície, tornando a Marinha uma força exclusivamente submarina. | b | Conforme o **item 2.2.1**, o SCPN consolida a opção para se contrapor aos desafios, materializando o Poder de Combate para a Postura Coercitiva. | | |
+| 35 | Pág 32 | 158 | Por que a capacidade de minagem e de contramedida de minagem (CMM) é reputada como essencial no contexto de sobrepujar ameaças estatais? | Para permitir a exploração mineral do leito marinho em águas internacionais. | Para a defesa e proteção das infraestruturas críticas (portos), importantes para as expressões do Poder Econômico e Militar. | Exclusivamente para o treinamento de mergulhadores de combate em águas interiores. | Para bloquear a foz do Rio Amazonas contra o tráfico de drogas, sem foco em ameaças estatais. | b | Conforme o **item 2.2.1 (Pág. 32)**, a capacidade de minagem e CMM é essencial para a defesa e proteção dessas infraestruturas críticas (portos). | | |
+| 35 | Pág 33 | 158 | Em relação à Linha de Esforço de Consciência Situacional, como deve ocorrer a expansão do Sistema de Gerenciamento da Amazônia Azul (SisGAAz)? | De forma simultânea em todas as águas jurisdicionais, sem priorização geográfica. | Focada exclusivamente na proteção de plataformas de petróleo na Bacia de Campos. | Buscando o gradualismo, expandindo sequencialmente para áreas como a Elevação do Rio Grande, Ilhas Oceânicas e Foz do Amazonas. | Priorizando apenas as águas interiores do Pantanal, em detrimento da área marítima. | c | Conforme o **item 2.2.2**, a MB deve buscar o gradualismo que permita a expansão sequencial para áreas como Elevação do Rio Grande, Ilhas Oceânicas, etc. | | |
+| 35 | Pág 34 | 158 | Quais princípios devem pautar o Emprego do Poder Naval segundo as orientações do Capítulo 2? | O treinamento isolado de cada meio, a maximização de gastos e o desvínculo com as análises estratégicas. | O treinamento contextualizado, a otimização no uso dos recursos e o alinhamento com as demandas das análises estratégicas. | A priorização de exercícios de parada naval em detrimento de exercícios de combate. | A utilização dos meios apenas em situações de guerra declarada, evitando o emprego na paz. | b | Conforme o **item 2.3**, o emprego deve ser pautado pelo treinamento contextualizado, otimização dos recursos e alinhamento com demandas estratégicas. | | |
+| 35 | Pág 35 | 158 | Como a Marinha deve proceder para otimizar o emprego dos meios na Consciência Situacional, considerando a limitação de recursos de IVR? | Adquirir satélites próprios imediatamente, dispensando a cooperação com outras forças. | Buscar a sinergia com o Exército (bacias hidrográficas), com a FAB (Amazônia Azul) e com o CENSIPAM. | Restringir a vigilância apenas às áreas portuárias, abandonando o monitoramento da ZEE. | Delegar a responsabilidade de IVR inteiramente para empresas privadas de segurança. | b | Conforme o **item 2.3.2**, a MB deve buscar a sinergia com o EB nas bacias hidrográficas, com a FAB na Amazônia Azul e com o CENSIPAM. | | |
+| 35 | Pág 36 | 158 | Como o documento orienta o dimensionamento da Força para operações de Garantia da Lei e da Ordem (GLO) e apoio à Defesa Civil? | Deve ser criado um dimensionamento específico e robusto exclusivamente para GLO e Defesa Civil. | A Marinha deve recusar essas missões para focar apenas na guerra naval clássica. | Não será realizado dimensionamento específico, devendo a MB atender com as capacidades que já possui. | O dimensionamento deve ser baseado na contratação de pessoal temporário civil para essas funções. | c | Conforme o **item 2.3.2 (Pág. 36)**, não será realizado dimensionamento específico, devendo a MB atender com as capacidades que já possui. | | |
