--- a/frontend-cemos/public/assets/content/estrategia/3-ema-310/script/m3.md
+++ b/frontend-cemos/public/assets/content/estrategia/3-ema-310/script/m3.md
@@ -1,5 +1,13 @@
-| bibliografia_titulo | paginas | assunto | pergunta | alternativa_a | alternativa_b | alternativa_c | alternativa_d | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
+| bibliografia_id | paginas | assunto | pergunta | alternativa_a | alternativa_b | alternativa_c | alternativa_d | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
 |---|---|---|---|---|---|---|---|---|---|---|---|
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 35 | Cap. IV - Processo de Planejamento Conjunto (PPC) | No contexto do Gerenciamento do Risco Operacional (GRO) nas Operações Conjuntas, como são conceituados os riscos operacionais que servem de apoio à decisão do Comandante? | São definidos exclusivamente pela probabilidade estatística de ocorrência de eventos climáticos adversos que impeçam a decolagem de aeronaves. | Correspondem apenas à gravidade dos danos causados pela ação inimiga, desconsiderando as incertezas ambientais ou logísticas. | São a combinação da probabilidade e gravidade dos potenciais danos ao andamento de uma operação, associados a perigos, ações adversas ou incertezas. | Referem-se à certeza absoluta de perdas materiais durante o combate, calculada através da subtração entre o poder de combate amigo e o inimigo. | c | Conforme a definição expressa no **item 4.1.4**, os riscos operacionais são conceituados como uma combinação de probabilidade e gravidade dos potenciais danos ao andamento de uma operação. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 36 | Cap. IV - Processo de Planejamento Conjunto (PPC) | O Processo de Planejamento Conjunto (PPC) possui características específicas que garantem sua eficácia. O que significa afirmar que o PPC possui "natureza cíclica"? | Significa que nenhuma das partes componentes será considerada definitiva até que a missão esteja integralmente cumprida. | Refere-se à possibilidade de retornar às partes anteriores do processo para rever aspectos ou analisar novos dados cuja importância não foi evidenciada antes. | Indica que o processo deve ser reiniciado do zero a cada 24 horas para garantir a atualização das ordens de batalha. | Quer dizer que o processo serve exclusivamente para resolver problemas militares clássicos entre duas forças antagônicas, repetindo padrões históricos. | b | De acordo com o **item 4.1.8**, a natureza cíclica é a possibilidade de retornar às partes anteriores para rever certos aspectos, obter e analisar novos dados. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 37 | Cap. IV - Processo de Planejamento Conjunto (PPC) | A etapa 1 (Exame de Situação Operacional) é considerada a base de todo o processo de planejamento. Qual é o resultado esperado ao final do estudo realizado nesta etapa? | A elaboração completa dos documentos para transmissão de ordens aos subordinados e o planejamento do controle da ação. | A verificação se a operação está se desenvolvendo conforme planejado e a introdução de alterações nos planos estabelecidos. | A escolha de uma Linha de Ação (LA) para o cumprimento da missão e, sempre que possível, um Conceito Preliminar da Operação (CPO). | A definição exclusiva da Matriz de Três Colunas, sem a necessidade de estabelecer uma Decisão do Comandante neste momento. | c | Nos termos do **item 4.2.1.1**, ao final deste estudo, chega-se à escolha de uma Linha de Ação (LA) e, sempre que possível, a um Conceito Preliminar da Operação (CPO). | | |
+| 35 | Pág 37 | 159 | O processo de dimensionamento da Força descrito no Capítulo 3 foi orientado pela Sistemática de Planejamento de Alto Nível da Marinha (SPAN). Além disso, qual elemento foi explicitamente levado em consideração na proposta de dimensionamento? | O Diagnóstico do Poder Naval. | O orçamento anual aprovado pelo Congresso Nacional para o ano corrente apenas. | A opinião pública internacional sobre o rearmamento naval. | A disponibilidade imediata de fornecedores estrangeiros de submarinos. | a | Conforme o **item 3.1**, é ressaltado que o Dimensionamento proposto levou em consideração o Diagnóstico do Poder Naval. | | |
+| 35 | Pág 39 | 159 | A Força de Intervenção Marítima foi dimensionada para atingir efeitos específicos. Dentre as opções abaixo, qual efeito geográfico específico é citado como parte do controle de área marítima de interesse desta força? | O controle total do Atlântico Norte. | O controle da Foz do Rio Amazonas e a região da Elevação do Rio Grande. | O bloqueio naval de portos na costa africana. | A patrulha exclusiva da Bacia do Prata e Hidrovia Paraguai-Paraná. | b | Conforme o **item 3.2.1, alínea 'd'**, a força visa o Controle de Área Marítima de Interesse, em especial a Foz do Rio Amazonas e a região da Elevação do Rio Grande. | | |
+| 35 | Pág 40 | 159 | No dimensionamento da Força de Proteção Marítima, há uma observação específica sobre as aeronaves de Patrulha Marítima. Qual é a situação descrita no texto sobre esses meios? | Foram dimensionadas em grande quantidade para suprir a deficiência de navios-escolta. | Não foram dimensionadas, pois a responsabilidade foi transferida integralmente para a Polícia Federal. | Não foram dimensionadas, pois ainda há indefinições na MB e na FAB quanto ao emprego da Asa Fixa em proveito da Força Naval. | Foram dimensionadas apenas para missões de busca e salvamento (SAR), excluindo ações de combate. | c | Conforme a nota no **item 3.2.2**, as aeronaves de Patrulha Marítima não foram dimensionadas devido a indefinições na MB e na FAB. | | |
+| 35 | Pág 41 | 159 | Em relação à Força de Guerra de Minas, quais foram as capacidades especificamente dimensionadas segundo o texto? | Minagem ofensiva em águas profundas e minagem nuclear. | Minagem defensiva e Contramedidas de Minagem sem oposição. | Minagem fluvial ofensiva e Contramedidas de Minagem sob fogo inimigo. | Minagem aérea e desminagem humanitária terrestre. | b | Conforme o **item 3.2.3**, as capacidades dimensionadas foram: Minagem defensiva; e Contramedidas de Minagem sem oposição. | | |
+| 35 | Pág 42 | 159 | A Força C5IVR é composta por sistemas importantes para o monitoramento e vigilância. Qual sistema é destacado para realizar vigilância e monitoramento ativo em áreas como a Bacia Petrolífera de Santos e a Margem Equatorial? | SISCOM. | PLADEPO. | SARP. | SisGAAz. | d | Conforme o **item 3.2.4**, o SisGAAz é identificado para vigilância e monitoramento ativo nas áreas citadas. | | |
+| 35 | Pág 43 | 159 | A Força de Desgaste tem como um de seus objetivos dimensionados a interrupção das linhas de Comunicação Marítimas. Onde, especificamente, esse efeito deve ser alcançado segundo o texto? | Em qualquer ponto do Oceano Atlântico. | Nas águas interiores brasileiras para impedir o comércio ilegal. | Em um porto no entorno estratégico. | Exclusivamente no Mar do Norte. | c | Conforme o **item 3.2.5**, a força foi dimensionada para interromper as linhas de Comunicação Marítimas em um porto no entorno estratégico. | | |
+| 35 | Pág 44 | 159 | A Força de Projeção foi dimensionada para alcançar diversos efeitos. Qual das alternativas abaixo corresponde a um desses efeitos previstos no documento? | Estabelecer superioridade aérea permanente sobre o continente inimigo. | Defender ou retomar Ilhas Oceânicas nacionais. | Realizar a administração civil de territórios ocupados por tempo indeterminado. | Garantir a segurança pública em grandes centros urbanos nacionais (GLO permanente). | b | Conforme o **item 3.2.6, alínea 'a'**, um dos efeitos é Defender/Retomar Ilhas Oceânicas nacionais. | | |
+| 35 | Pág 45 | 159 | Qual é o propósito central do dimensionamento da Força Logística de Combate? | Apoiar exclusivamente as ações humanitárias e de defesa civil. | Apoiar a Força de Intervenção, Força de Projeção e Força de Desgaste nos propósitos para os quais foram dimensionados. | Gerar lucro através do transporte comercial de cargas para civis. | Manter a infraestrutura de bases terrestres sem conexão com as forças operativas no mar. | b | Conforme o **item 3.2.7**, a Força Logística de Combate visa apoiar a Força de Intervenção, Força de Projeção e Força de Desgaste. | | |
+| 35 | Pág 46 | 159 | Como o texto descreve o dimensionamento da Força de Operações Especiais em relação aos efeitos do Capítulo 2 do Plano de Configuração de Força (PCF)? | Foi dimensionada para atuar exclusivamente em ações de contraterrorismo em portos. | Foi dimensionada para contribuir com a consecução de praticamente todos os efeitos. | Não foi dimensionada, pois suas ações são consideradas secretas e fora do escopo do PCF. | Foi dimensionada apenas para apoiar a Força de Fuzileiros da Esquadra em desembarques anfíbios clássicos. | b | Conforme o **item 3.2.8**, esta força foi dimensionada para contribuir com a consecução de praticamente todos os efeitos. | | |
+| 35 | Pág 47 | 159 | A Força de Serviços Hidroceanográficos destina-se a cumprir compromissos internacionais assumidos pelo Brasil relacionados a qual vertente da Segurança Marítima? | A vertente *security* (segurança contra atos ilícitos intencionais). | A vertente *safety* (segurança da navegação e salvaguarda da vida humana). | A vertente *defense* (defesa contra agressões estatais). | A vertente *trade* (segurança comercial e aduaneira). | b | Conforme o **item 3.2.9**, a força destina-se a cumprir compromissos relacionados à vertente *safety* da Segurança Marítima. | | |
+| 35 | Pág 48 | 159 | Além de apoiar a pesquisa em si, qual é o objetivo estratégico do dimensionamento da Força de Apoio à Pesquisa Antártica para o Brasil? | Garantir a soberania territorial imediata sobre o continente antártico. | Contribuir para a relevância do país nos comitês e organizações científicas ligadas ao tema. | Estabelecer bases militares ofensivas no Círculo Polar Antártico. | Explorar comercialmente recursos minerais antárticos em curto prazo. | b | Conforme o **item 3.2.10**, a força visa contribuir para a relevância do país nos comitês e organizações científicas ligadas ao tema. | | |
