--- a/frontend-cemos/public/assets/content/estrategia/3-ema-310/script/m1.md
+++ b/frontend-cemos/public/assets/content/estrategia/3-ema-310/script/m1.md
@@ -1,36 +1,20 @@
-| bibliografia_titulo | paginas | assunto | pergunta | alternativa_a | alternativa_b | alternativa_c | alternativa_d | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
+| bibliografia_id | paginas | assunto | pergunta | alternativa_a | alternativa_b | alternativa_c | alternativa_d | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
 |---|---|---|---|---|---|---|---|---|---|---|---|
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 39 | Cap. V - Exame de Situação Operacional | O Exame de Situação Operacional é dividido em fases lógicas. Qual característica fundamental do processo de planejamento permite o retorno a fases anteriores para reexaminar fatos? | A rigidez doutrinária, que exige a revisão completa de todas as fases caso um novo dado seja inserido. | A natureza cíclica do processo de planejamento, que requer eficaz coordenação entre as seções do EMCj. | A linearidade absoluta, impedindo o retorno a fases anteriores para garantir a celeridade da decisão. | A compartimentação das seções de inteligência, que trabalham de forma isolada das seções de operações. | b | Conforme o **item 5.1.2**, isso se deve à natureza cíclica do processo de planejamento, o que requererá uma eficaz coordenação entre as seções do EMCj. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 40 | Cap. V - Exame de Situação Operacional | Qual é o pré-requisito fundamental para o início efetivo do planejamento pelo Comandante e seu EMCj, considerando que crises não surgem repentinamente? | A existência de um trabalho de Inteligência prévio, sem o qual carecerão de dados suficientes para as análises iniciais. | A definição imediata da decisão final pelo escalão superior antes de qualquer análise do ambiente. | A mobilização total das forças de reserva antes do início da fase de avaliação do ambiente operacional. | A conclusão do Plano Operacional pelas Forças Componentes antes da intervenção do Estado-Maior Conjunto. | a | Nos termos do **item 5.1.6**, é de fundamental importância a existência de um trabalho de Inteligência prévio para o início efetivo do planejamento. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 41 | Cap. V - Exame de Situação Operacional | Na Avaliação do Ambiente Operacional, como o Comandante Operacional deve buscar dirimir diferenças de interpretação sobre os objetivos estratégicos? | Aguardando passivamente a emissão de novas diretrizes escritas para evitar ruídos de comunicação. | Estabelecendo um diálogo com as lideranças do nível superior para esclarecer objetivos e formas de atingi-los. | Baseando-se exclusivamente nas informações obtidas na mídia aberta e discursos públicos. | Delegando a interpretação política inteiramente ao Chefe da Seção de Operações sem consultar o nível estratégico. | b | Conforme o **item 5.2.3.3.2**, o Cmt Op deve estabelecer um diálogo com as lideranças do nível superior para dirimir as diferenças de interpretação. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 42 | Cap. V - Exame de Situação Operacional | Ao analisar os Fatores Políticos de um ambiente operacional, que aspecto pode ser tão relevante a ponto de tornar um plano inaceitável? | A falta de tradutores diplomáticos para acompanhar as tropas em combate. | A estrutura das organizações não governamentais focadas em meio ambiente. | As consequências políticas ou as reações aos vários tipos de operações. | A existência de tratados comerciais antigos que não envolvem aspectos militares. | c | Segundo o **item 5.2.3.4.4.1.a.1**, as consequências políticas ou as reações aos vários tipos de operações serão aspectos extremamente importantes a ponto de poderem tornar um plano inaceitável. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 43 | Cap. V - Exame de Situação Operacional | O que define o Estado Final Desejado Operacional (EFD Op) no contexto do planejamento? | É a descrição detalhada de todas as manobras táticas que serão executadas pelas forças singulares. | É o ponto em que o nível político assume o comando direto das operações táticas no terreno. | É a descrição das condições que, uma vez alcançadas, permitem assumir a missão como cumprida e o Poder Militar deixa de ter influência significativa. | É a definição exata dos custos financeiros da operação para o Ministério da Defesa. | c | Conforme o **item 5.2.3.5**, o EFD Op constitui uma descrição sucinta das condições que permitirão ao Cmt Op assumir que a sua missão foi efetivamente cumprida. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 44 | Cap. V - Exame de Situação Operacional | Como é definido o "problema" no contexto das operações militares durante a fase de Avaliação do Ambiente Operacional? | É a falta de recursos financeiros para o pagamento de diárias durante a operação. | É a condição ou conjunto de condições que impede ou dificulta o Cmt Op de atingir seu EFD Op. | É a discordância entre os Comandantes das Forças Componentes sobre a hierarquia. | É a ausência de mapas atualizados da área de operações na Seção de Inteligência. | b | Nos termos do **item 5.2.3.6.1**, um problema é, em termos gerais, a condição ou conjunto de condições que impede ou dificulta o Cmt Op de atingir seu EFD Op. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 45 | Cap. V - Exame de Situação Operacional | Ao enunciar a missão no Exame de Situação, qual estrutura deve ser seguida pelo Comandante Operacional? | Discriminar primeiro o propósito e depois a tarefa, unidos pela expressão "devido a". | Enunciar apenas a tarefa principal, deixando o propósito implícito para dar liberdade aos subordinados. | Discriminar a tarefa mais o propósito, nessa ordem, unidos pela expressão "a fim de". | Listar todas as tarefas possíveis sem definir um propósito específico para manter a flexibilidade. | c | Conforme o **item 5.2.4.2.1**, o Cmt Op deverá enunciar a sua missão, discriminando a(s) tarefa(s) mais o(s) propósito(s), nessa ordem, unidos pela expressão “a fim de”. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 46 | Cap. V - Exame de Situação Operacional | O que caracteriza a adoção de uma "Premissa Básica" (PB) durante o planejamento operacional? | É a certeza absoluta sobre um fato futuro, dispensando qualquer planejamento alternativo. | É uma suposição sobre o futuro ou situação atual que substitui informações indisponíveis, implicando na elaboração de planejamento contingente. | É uma diretriz política imutável que não pode ser questionada ou testada pelo planejador. | É um dado confirmado pela inteligência que serve de base sólida para todas as fases do exame de situação. | b | De acordo com o **item 5.2.4.3.c.1**, a PB é uma suposição que substitui informações não disponíveis, implicando na elaboração de um planejamento contingente. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 47 | Cap. V - Exame de Situação Operacional | Qual documento emitido pelo Comandante caracteriza a conclusão da fase de avaliação do ambiente e desencadeia o trabalho subsequente do Estado-Maior? | A Ordem de Operações Final (OOF). | O Relatório de Inteligência Estratégica (RIE). | A Diretriz de Planejamento (DIPLAN). | O Pedido de Cooperação de Instrução (PCI). | c | Conforme o **item 5.2.5.3**, a emissão da DIPLAN caracterizará a conclusão da fase de avaliação do ambiente operacional e análise da missão, sendo pré-requisito ao trabalho subsequente. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 48 | Cap. V - Exame de Situação Operacional | Na metodologia de análise para definir os Fatores de Força e Fraqueza, a que corresponde o preceito cartesiano da "síntese"? | À divisão das dificuldades em partes menores para resolvê-las uma a uma. | À aceitação apenas do que é claro e indiscutível como verdade. | À consolidação das diversas conclusões nos Fatores de Força e Fraqueza. | Ao levantamento de todos os fatos pertinentes sem realizar revisões. | c | Segundo o **item 5.3.3.2.d**, a síntese é realizada na consolidação das diversas conclusões nos Fatores de Força e Fraqueza. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 49 | Cap. V - Exame de Situação Operacional | Qual é a distinção conceitual entre Arte Operacional e Abordagem Operacional no processo de planejamento? | Arte Operacional é o processo de desenho gráfico, enquanto Abordagem Operacional é a execução tática. | Arte Operacional é o conjunto de conceitos; Abordagem Operacional é o processo onde o Cmt usa esses conceitos para conceber uma ideia geral. | Arte Operacional refere-se ao nível tático, enquanto Abordagem Operacional refere-se ao nível estratégico. | Não há distinção, sendo termos sinônimos para a condução de guerras navais. | b | Conforme os **itens 5.3.3.3.1 e 5.3.3.3.2**, Arte Operacional compreende um conjunto de conceitos, enquanto Abordagem Operacional é o processo no qual o Comandante emprega tais conceitos. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 50 | Cap. V - Exame de Situação Operacional | Na análise das características da área de responsabilidade, qual é a importância da identificação dos principais cursos d'água em operações predominantemente terrestres? | Eles servem exclusivamente para o abastecimento de água potável da tropa. | São irrelevantes para o planejamento operacional, afetando apenas o nível tático de pelotão. | É importante para o planejamento de manobras envolventes, levantamento de restrições ao apoio e delimitação de linhas de cerco. | Sua análise visa apenas evitar áreas de preservação ambiental para não incorrer em crimes ecológicos. | c | Nos termos do **item 5.3.4.1.a.5**, a identificação dos principais cursos d'água será particularmente importante para o planejamento de manobras envolventes, restrições ao apoio e linhas de cerco. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 51 | Cap. V - Exame de Situação Operacional | Ao analisar os "Pontos de Importância Operacional", que tipo de aspecto deve ser enfatizado além das localizações geográficas? | A história cultural detalhada de cada monumento existente na região. | A vulnerabilidade das forças em relação à projeção da aviação oponente baseada nessas posições. | A arquitetura das instalações civis para fins de catalogação histórica. | O custo imobiliário dos terrenos para futuras desapropriações. | b | Conforme o **item 5.3.4.1.e.3**, um dos pontos a serem enfatizados é a vulnerabilidade das forças em relação à projeção da aviação oponente baseada nessas posições. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 52 | Cap. V - Exame de Situação Operacional | No estudo das Forças Inimigas, qual aspecto da mobilização deve receber destaque? | A cor dos uniformes utilizados pelas tropas de reserva. | A atualização e modernização de seus sistemas de mobilização e as reais possibilidades de apresentar novos meios no tempo estimado. | A quantidade de feriados nacionais que possam atrasar a mobilização civil. | O histórico de mobilização do século anterior, independentemente da capacidade atual. | b | Segundo o **item 5.3.5.1.d**, destaca-se a atualização e modernização de seus sistemas de mobilização e suas reais possibilidades de apresentar novos meios no tempo estimado. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 53 | Cap. V - Exame de Situação Operacional | Qual deve ser o foco principal da Comparação de Poderes de Combate (CPC) no nível operacional? | A comparação numérica simples de fuzis e munições de infantaria. | A comparação entre "capacidades antagônicas", como projeção de poder aéreo versus defesa antiaérea, mais do que sistemas isolados. | A análise exclusiva do moral da tropa, desconsiderando os meios materiais. | O confronto direto entre as patentes dos comandantes de cada lado. | b | Conforme o **item 5.3.8.3**, o foco principal será a comparação entre “capacidades antagônicas”, muito mais do que entre sistemas de armas isoladamente. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 54 | Cap. V - Exame de Situação Operacional | Como deve ser realizada a comparação no item "Logística e Mobilização" durante o Exame de Situação? | Comparando diretamente a quantidade de caminhões do inimigo com a quantidade de caminhões das forças amigas. | Levantando as capacidades frente às necessidades das respectivas forças, buscando identificar vulnerabilidades do oponente e carências próprias. | Ignorando as vulnerabilidades do oponente e focando apenas no inventário de peças sobressalentes próprias. | Estabelecendo uma tabela de equivalência financeira entre os gastos logísticos de ambos os lados. | b | Nos termos do **item 5.3.8.4.c.1**, não cabe a comparação entre as capacidades, mas somente o levantamento das capacidades frente às necessidades das respectivas forças, amigas e inimigas. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 55 | Cap. V - Exame de Situação Operacional | Ao sintetizar os Fatores de Força e Fraqueza (FFF), qual cuidado deve ser tomado pelo Estado-Maior Conjunto? | Listar "o que não se tem" como fator de fraqueza, para garantir que todas as carências sejam supridas. | Evitar indicar como fator de força de um oponente o que já foi apontado como fator de fraqueza do outro, e vice-versa. | Repetir todos os fatores levantados na fase anterior sem qualquer filtro ou síntese. | Considerar apenas os fatores materiais, descartando aspectos morais ou de liderança. | b | Conforme o **item 5.3.9.3**, deve-se ter cuidado para não indicar como fator de força de um oponente o que já tenha sido apontado como fator de fraqueza do outro. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 56 | Cap. V - Exame de Situação Operacional | Qual é um dos propósitos fundamentais do Desenho Operacional elaborado pelo Comandante e seu EMCj? | Substituir a Diretriz de Planejamento (DIPLAN) como documento formal de ordens. | Comunicar a visão do Comandante sobre "o que" deve ser feito para alcançar o EFD Op e guiar a elaboração das Linhas de Ação. | Servir como mapa topográfico detalhado para as unidades de nível tático. | Definir o orçamento final da operação para aprovação ministerial. | b | Segundo o **item 5.3.10.5**, o Desenho Operacional tem o propósito de comunicar a visão do Comandante e guiar a elaboração das Linhas de Ação. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 57 | Cap. V - Exame de Situação Operacional | O que diferencia os Elementos Essenciais de Inteligência (EEI) das Outras Necessidades de Inteligência (ONI)? | EEI são conhecimentos necessários ao prosseguimento do planejamento, enquanto ONI apenas melhoram a consciência situacional. | EEI são dados sobre o inimigo, enquanto ONI são dados sobre o terreno. | EEI são urgentes e devem ser obtidos em 24h, enquanto ONI não têm prazo. | Não há diferença, ambos impedem o prosseguimento do planejamento se não forem atendidos. | a | Conforme o **item 5.3.12.1**, os EEI são necessários ao prosseguimento do planejamento, já as ONI, apesar de não impedirem o prosseguimento, possibilitam melhor consciência situacional. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 58 | Cap. V - Exame de Situação Operacional | Por que o Comandante não deve rejeitar uma Possibilidade do Inimigo (Psb Ini) baseando-se apenas na improbabilidade de sua adoção? | Porque todas as Psb Ini têm estatisticamente a mesma chance de ocorrer. | Porque rejeitar o improvável significa raciocinar em termos de intenções do inimigo, correndo o risco de ser surpreendido. | Porque o regulamento exige que se planeje contra no mínimo dez possibilidades diferentes. | Porque a Seção de Inteligência não tem autoridade para classificar probabilidades. | b | De acordo com o **item 5.4.2.3.3**, basear-se unicamente na improbabilidade significa raciocinar em termos de intenções do inimigo e correr o risco de ser surpreendido. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 59 | Cap. V - Exame de Situação Operacional | Quais são as três formas complementares que expressam uma Linha de Ação (LA) para proporcionar perfeito entendimento da manobra? | Texto, áudio e vídeo explicativo. | Enunciado, representação gráfica e conceito sumário. | Intenção, ordem de batalha e lista de alvos. | Mapa de situação, tabela de frequências e pedido de suprimento. | b | Nos termos do **item 5.4.3.2**, cada LA é melhor expressa por meio do seu “enunciado”, “representação gráfica” e “conceito sumário”. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 60 | Cap. V - Exame de Situação Operacional | Na formulação das Linhas de Ação, como é definida uma "Ação" no nível operacional? | É a descrição abstrata de um desejo do comandante, sem verbo de ação. | É o ato de realizar uma tarefa ou conjunto de tarefas que contribuem para o atingimento de um efeito, escrita com verbo no infinitivo. | É o movimento físico de tropas exclusivamente no terreno, excluindo ações cibernéticas. | É a consequência final observada no sistema inimigo, sinônimo de "Efeito". | b | Conforme o **item 5.4.3.3.4**, Ação é o ato de realizar uma tarefa ou conjunto de tarefas que contribuem para o atingimento de um efeito, escrita com o verbo no infinitivo. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 61 | Cap. V - Exame de Situação Operacional | Na Prova Preliminar de APA, quando uma Linha de Ação (LA) é considerada "Adequada"? | Quando pode ser implementada com os custos financeiros mais baixos possíveis. | Se puder cumprir a Missão e atingir o EFD Operacional, produzindo um efeito compatível com a Abordagem Operacional. | Quando é aceita por todos os comandantes subordinados sem restrições. | Se utilizar apenas os meios já disponíveis, sem necessidade de reforços ou mobilização. | b | Segundo o **item 5.4.3.6.2**, uma LA será ADEQUADA se puder cumprir a Missão e atingir o EFD Operacional, produzindo um efeito compatível com a Abordagem Operacional. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 62 | Cap. V - Exame de Situação Operacional | O que define a "Aceitabilidade" de uma Linha de Ação durante a Prova Preliminar? | A garantia de que não haverá nenhuma perda de material ou pessoal. | A aprovação política imediata do plano pelo Ministério da Defesa. | A verificação se os prováveis resultados compensam os riscos e custos estimados. | A capacidade de executar a LA com a tecnologia disponível, independentemente do custo. | c | Conforme o **item 5.4.3.6.6**, uma LA será considerada ACEITÁVEL se os prováveis resultados compensarem os riscos e custos estimados. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 63 | Cap. V - Exame de Situação Operacional | Como deve ser organizada a participação das seções no Confronto (Jogo da Guerra) para dar maior robustez à análise? | A Seção de Operações (D-3) deve conduzir o confronto sozinha para garantir o sigilo. | Devem ser formados dois partidos: um da D-3 (analisando as próprias LA) e um da D-2 (expondo as Psb Ini), com participação de outras seções. | O Comandante deve ser o único a expor as LA e as Psb Ini para evitar discussões. | A Seção de Inteligência deve defender as LA amigas enquanto a Seção de Operações defende o inimigo. | b | Nos termos do **item 5.4.4.3.1**, são formados dois partidos: um responsável pela análise das próprias LA (D-3) e um responsável pela exposição das Psb Ini (D-2). | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 64 | Cap. V - Exame de Situação Operacional | Qual é a dinâmica típica do processo interativo entre uma LA e uma Psb Ini durante a condução do Confronto? | Observação, Orientação, Decisão e Ação (OODA). | Ação, Reação e Contrarreação. | Planejamento, Execução e Controle. | Ataque, Defesa e Retirada. | b | Conforme o **item 5.4.4.4.6**, esse processo interativo entre LA e Psb Ini, normalmente, possui três movimentos: AÇÃO, REAÇÃO e CONTRARREAÇÃO. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 65 | Cap. V - Exame de Situação Operacional | Qual erro comum o EMCj deve evitar ao analisar o confronto de ações entre Forças Componentes? | Limitar a análise a ações entre forças da mesma natureza (ex: Naval contra Naval), ignorando as interações entre componentes diferentes. | Utilizar mapas digitais em vez de cartas de papel para o registro das ações. | Realizar o confronto detalhado de todas as LA contra todas as Psb Ini, perdendo tempo excessivo. | Considerar a sustentabilidade logística como fator crítico de sucesso. | a | De acordo com o **item 5.4.4.4.9**, um erro comum é o EMCj limitar a análise do confronto de ações entre Forças Componentes singulares, deixando de considerar interações cruzadas. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 66 | Cap. V - Exame de Situação Operacional | O que o Comandante deve fazer caso conclua, na Prova Final de APA, que nenhuma LA satisfaz os critérios de adequabilidade, praticabilidade e aceitabilidade? | Escolher a LA "menos pior" e assumir todos os riscos. | Participar suas conclusões ao seu escalão superior. | Executar a missão sem um plano definido, confiando na iniciativa dos subordinados. | Alterar artificialmente os dados de inteligência para tornar a LA aceitável. | b | Conforme o **item 5.4.4.6.4**, caso nenhuma LA satisfaça à prova final de APA, o Comandante participará suas conclusões ao seu escalão superior. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 67 | Cap. V - Exame de Situação Operacional | Na Fase de Comparação das Linhas de Ação, qual é o critério base para a seleção da melhor LA pelo Comandante? | A preferência pessoal do Comandante pela Força Armada de sua origem. | As vantagens e desvantagens de cada LA, identificadas fundamentalmente pelas conclusões do confronto. | A LA que tiver o desenho gráfico mais bem elaborado e detalhado. | A opinião da maioria simples dos oficiais do Estado-Maior, através de votação. | b | Segundo o **item 5.5.1.1**, essa seleção baseia-se nas vantagens e desvantagens de cada LA... As conclusões do confronto serão fundamentais na determinação desses aspectos. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 68 | Cap. V - Exame de Situação Operacional | Na utilização da Matriz de Apoio à Decisão, como são definidos os "pesos" para cada parâmetro de avaliação? | São definidos aleatoriamente pelo software de apoio à decisão. | São atribuídos pelo Comandante Operacional, fundamentando-se na experiência, liderança e diretrizes recebidas. | São padronizados pelo Ministério da Defesa e imutáveis para qualquer operação. | São calculados pela média aritmética das notas dadas pelos Chefes de Seção. | b | Conforme o **item 5.5.1.7.2.1.d**, o Cmt Op atribui pesos para cada parâmetro de avaliação, fundamentando-se na experiência, na pessoalidade de sua liderança, etc. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 69 | Cap. V - Exame de Situação Operacional | Qual alerta importante é dado aos planejadores sobre a utilização da Matriz de Decisão? | A ferramenta é infalível e o resultado matemático deve ser seguido obrigatoriamente. | Deve-se atentar para o elevado grau de subjetividade do processo, sendo necessário profissionalismo para não incorrer em julgamentos tendenciosos. | A matriz dispensa a experiência do Comandante, pois automatiza a escolha racional. | A pontuação deve ser sempre de 0 a 100 para garantir precisão decimal. | b | Nos termos do **item 5.5.1.7.2.2**, os planejadores deverão atentar para o elevado grau de subjetividade do processo, sendo necessário profissionalismo para não incorrer em julgamentos tendenciosos. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 70 | Cap. V - Exame de Situação Operacional | Na fase da Decisão, qual é a responsabilidade do Comandante em relação à escolha da Linha de Ação? | Deve acatar obrigatoriamente a recomendação da Matriz de Decisão elaborada pelo Estado-Maior. | A escolha é de sua exclusiva responsabilidade, podendo inclusive adotar uma posição discordante da assessoria do EMCj. | Deve submeter a escolha à votação dos Comandantes das Forças Componentes. | A responsabilidade é compartilhada solidariamente com o Chefe do Estado-Maior Conjunto. | b | Conforme o **item 5.6.1**, essa escolha será de sua exclusiva responsabilidade... mesmo que adotando uma posição discordante da assessoria prestada pelo seu EMCj. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 72 | Cap. V - Exame de Situação Operacional | O que representa o Conceito Preliminar da Operação (CPO) em relação à Linha de Ação (LA) decidida? | É um documento totalmente novo, sem relação com o trabalho anterior do Estado-Maior. | É apenas a cópia fiel do Conceito Sumário da LA, sem acréscimos. | É o aprimoramento do Conceito Sumário da LA selecionada, enriquecido pelas conclusões do Confronto e análises do Exame de Situação. | É a versão final do Plano Operacional, contendo todos os anexos de inteligência e logística. | c | Segundo o **item 5.7.2**, o CPO nada mais é que o aprimoramento do Conceito Sumário da LA selecionada como Decisão, enriquecido pelas conclusões obtidas no Confronto. | | |
-| Portaria Normativa nº 84/GM-MD 2º Vol | Pág 73 | Cap. V - Exame de Situação Operacional | Além de servir como documento interno e apresentação ao escalão superior, qual outra função pode ter o Conceito Preliminar da Operação (CPO)? | Ser publicado na mídia para informar a população sobre as intenções militares. | Ser disseminado para as Forças Componentes como uma "Ordem Preparatória" para antecipar providências. | Substituir o relatório de avaliação pós-ação ao final da campanha. | Servir como base para a desmobilização imediata das tropas antes do início das ações. | b | Conforme o **item 5.7.4**, o CPO pode ser disseminado para as Forças Componentes sob a forma de uma “Ordem Preparatória”, possibilitando a antecipação de providências. | | |
+| 35 | Pág 9 | 157 | De acordo com a dinâmica intrínseca à estratégia descrita no Conceito Estratégico da Defesa Marítima, como se associam os elementos FINS, MANEIRAS e MEIOS? | FINS associam-se às Capacidades Estratégicas; MANEIRAS aos Objetivos Estratégicos; e MEIOS às Posturas Estratégicas. | FINS associam-se às Posturas Estratégicas; MANEIRAS às Capacidades Estratégicas; e MEIOS aos Objetivos Estratégicos. | FINS associam-se aos Objetivos Estratégicos; MANEIRAS às Posturas Estratégicas; e MEIOS às Capacidades Estratégicas. | FINS associam-se aos Riscos Identificados; MANEIRAS à Conjuntura; e MEIOS aos Objetivos de Gestão. | c | Conforme o **item 1.1**, os FINS associam-se aos Objetivos Estratégicos, as MANEIRAS às Posturas Estratégicas e os MEIOS às Capacidades Estratégicas. | | |
+| 35 | Pág 10 | 157 | O Objetivo Estratégico 1 (OBE 1) orienta a Marinha do Brasil para atividades de Defesa Naval. Qual é o foco prioritário deste objetivo? | A proteção dos recursos vivos e não-vivos da Amazônia Azul contra a pesca ilegal e a biopirataria. | O enfrentamento de ameaças estatais que utilizem os ambientes marítimo e fluvial para se contrapor aos interesses brasileiros. | A garantia da segurança da navegação e a salvaguarda da vida humana nas águas jurisdicionais brasileiras. | O apoio às ações do Estado no combate aos delitos transfronteiriços e ambientais na faixa de fronteira. | b | Conforme o **item 1.2.1**, o OBE 1 prioriza tarefas e ações contra as ameaças estatais que se utilizem dos ambientes marítimo e fluvial. | | |
+| 35 | Pág 11 | 157 | O que preconiza o Objetivo Estratégico 8 (OBE 8) em relação ao desenvolvimento do Setor Estratégico Nuclear de Defesa? | A aquisição de armamento nuclear ofensivo para dissuasão estratégica contra potências estrangeiras. | A privatização do setor nuclear para fomentar a pesquisa em universidades civis sem vínculo com a Defesa. | O desenvolvimento da tecnologia nuclear para fins pacíficos no âmbito da Defesa, privilegiando o Submarino Convencionalmente Armado com Propulsão Nuclear (SCPN). | A substituição de toda a matriz energética dos meios navais por propulsão nuclear até o final do ciclo estratégico. | c | Conforme o **item 1.2.8**, este OBE privilegia o desenvolvimento e operação do SCPN e tecnologias para utilização da energia nuclear para fins pacíficos. | | |
+| 35 | Pág 12 | 157 | Para a definição das Posturas e Prioridades Estratégicas que orientam o Conceito Estratégico (2024-2027), quais elementos foram analisados em conjunto com os Objetivos Estratégicos (OBE)? | As Possibilidades de Atuação do Poder Naval e o Diagnóstico do Poder Naval. | Apenas a disponibilidade orçamentária do Ministério da Defesa e o cenário econômico global. | As diretrizes exclusivas do Ministério das Relações Exteriores e os tratados de comércio internacional. | O número de militares na reserva e a capacidade de recrutamento imediato. | a | Conforme o **item 1.3**, definiram-se as Posturas e Prioridades analisando as Possibilidades de Atuação do Poder Naval e o Diagnóstico do Poder Naval. | | |
+| 35 | Pág 13 | 157 | No contexto das Posturas Estratégicas da Marinha, qual característica distingue a postura de "Coerção"? | O uso predominante do diálogo e da força do argumento para buscar objetivos sem ameaças. | A atuação em apoio a outra Força ou órgão, permitindo concessões e trocas proveitosas, sem uso de força. | O uso majoritário de recursos de ameaça do uso da força para desencorajar ou impedir o antagonista, influenciando sua avaliação de custo-benefício. | O efetivo choque de forças adotado de pronto, sem passar por etapas de ameaça ou dissuasão. | c | Conforme o **item 1.3.1 (III)**, a Coerção é a postura na qual são usados majoritariamente recursos de ameaça do uso da força para desencorajar o antagonista. | | |
+| 35 | Pág 14 | 157 | Considerando as Posturas Estratégicas por Campos de Atuação, qual postura deve ser adotada para a Defesa Naval na Amazônia Azul e áreas marítimas de interesse? | Cooperativa, visando o apoio mútuo com marinhas de países vizinhos. | Persuasiva, buscando o diálogo diplomático antes de qualquer posicionamento de meios. | Coercitiva, tanto na Amazônia Azul quanto nas áreas ribeirinhas de interesse. | Passiva, aguardando a definição de regras de engajamento por organismos internacionais. | c | Conforme o **item 1.3.2, alínea 'a'**, na Defesa Naval, a postura deverá ser Coercitiva na Amazônia Azul e áreas marítimas de interesse. | | |
+| 35 | Pág 15 | 157 | No campo da Diplomacia Naval, qual postura a Marinha deve adotar nos fóruns de interesse? | Coercitiva, para impor os interesses nacionais sobre os demais participantes. | Persuasiva, utilizando o Poder Naval como elemento de apoio à Política Externa. | De Uso da Força, caso os argumentos brasileiros não sejam aceitos de imediato. | Isolacionista, evitando compromissos que limitem a soberania nacional. | b | Conforme o **item 1.3.2, alínea 'c'**, a postura deverá ser Persuasiva nos fóruns de interesse e Cooperativa no uso dos meios em apoio à Política Externa. | | |
+| 35 | Pág 16 | 157 | Dentre as Prioridades Estratégicas de Defesa Naval (DEF), qual delas está diretamente relacionada à obtenção de capacidades para uma Postura Coercitiva na Amazônia Azul, citando explicitamente o SCPN? | DEF1 - Ampliar a consciência situacional marítima. | DEF6 - Ampliar a cooperação com a FAB e o CENSIPAM. | DEF11 - Dar continuidade à obtenção de capacidades que permitam uma Postura Coercitiva (atualmente, por meio do SCPN). | DEF17 - Consolidar o Sistema de Defesa NBQR. | c | Conforme o **item 1.3.3, alínea 'a', subitem XI**, a prioridade DEF11 refere-se à obtenção de capacidades para Postura Coercitiva, citando o SCPN. | | |
+| 35 | Pág 17 | 157 | Qual é a prioridade estratégica no campo de Segurança Marítima (SMA) que envolve a cooperação com a Força Aérea Brasileira (FAB)? | SMA1 - Ampliar a consciência situacional nas LCF da Bacia Amazônica. | SMA4 - Ampliar a cooperação com a FAB com foco em Inteligência, Vigilância e Reconhecimento (IVR) e Patrulha Marítima. | SMA6 - Ampliar a consciência situacional nas LCF da Bacia Platina. | SMA7 - Otimizar os meios empregados na Patrulha Naval do Sul. | b | Conforme o **item 1.3.3, alínea 'b', subitem IV**, a prioridade SMA4 é ampliar a cooperação com a FAB com foco em IVR e Patrulha Marítima. | | |
+| 35 | Pág 18 | 157 | Na Análise de Risco apresentada na Tabela 1, qual dos eventos abaixo é classificado com avaliação "Crítico"? | Evento que exija a atuação isolada nas áreas críticas de conflito na Amazônia. | Desalinhamento da Diplomacia Naval com a Política Externa. | Interrupção do Projeto Estratégico do Submarino Convencionalmente Armado com Propulsão Nuclear (SCPN). | Lacuna doutrinária em operações com Órgãos de Segurança Pública. | c | Conforme a **Tabela 1 (Risco R3)**, a interrupção do Projeto Estratégico do SCPN é classificada como um risco Crítico. | | |
+| 35 | Pág 19 | 157 | Quais são os limites geográficos que definem o Atlântico Sul Geopolítico, priorizado pela Marinha no Conceito Estratégico? | Ao norte pelo Trópico de Câncer; ao sul pelo Círculo Polar Antártico; a leste pela Europa; e a oeste pela América do Norte. | Ao norte pelo paralelo 16°N; ao sul pelo Continente Antártico; a leste pelo litoral da África Ocidental; e a oeste pela América do Sul. | Ao norte pela Linha do Equador; ao sul pela Convergência Antártica; a leste pelo Meridiano de Greenwich; e a oeste pela Linha de Tordesilhas. | Ao norte pelo Mar do Caribe; ao sul pelo Estreito de Magalhães; a leste pelo Cabo da Boa Esperança; e a oeste pelo Canal do Panamá. | b | Conforme o **item 1.6**, o Atlântico Sul Geopolítico é compreendido pelos limites: norte 16°N, sul Continente Antártico, leste África Ocidental e oeste América do Sul. | | |
+| 35 | Pág 20 | 157 | Para se contrapor às ameaças e gerar Efeitos Estratégicos, a Marinha executará ações desenvolvendo as Tarefas Básicas do Poder Naval (TBPN). Quais capacidades a Força deve ter para tal fim? | Apenas a capacidade de realizar proteção marítima e atividades de polícia naval. | Negar o uso do mar, projetar poder, controlar áreas marítimas, realizar proteção marítima e contribuir para a segurança e desenvolvimento. | Focar exclusivamente na defesa territorial terrestre e na segurança das instalações portuárias. | Priorizar a diplomacia naval em detrimento do poder de combate e da projeção de poder. | b | Conforme o **item 1.6 (4º parágrafo)**, a MB deverá ser capaz de negar o uso do mar, projetar poder, controlar áreas marítimas, realizar proteção marítima, entre outros. | | |
+| 35 | Pág 21 | 157 | Em relação ao objetivo de sobrepujar ameaças estatais, qual tecnologia é citada como potencializadora do Poder de Combate e da Postura Coercitiva? | Mísseis balísticos intercontinentais baseados em terra. | Propulsão naval nuclear aplicada em submarinos. | Porta-aviões de propulsão convencional de grande porte. | Satélites de ataque orbital e defesa cibernética ofensiva. | b | Conforme o **item 1.6 (2º parágrafo da pág. 21)**, o Poder de Combate é potencializado pelo desenvolvimento de tecnologias, especialmente a de propulsão naval nuclear aplicada em submarinos. | | |
+| 35 | Pág 22 | 157 | Qual é a estratégia de defesa adotada para as Ilhas Oceânicas de Fernando de Noronha e Trindade? | Manutenção de uma defesa fixa permanente com artilharia de costa e batalhões de fuzileiros navais. | Cessão temporária para bases internacionais visando a proteção cooperativa. | Não manter defesa fixa permanente, mas manter consciência situacional e prontidão para retomá-las, adotando Postura Coercitiva para controle/negação de área. | Desmilitarização completa para evitar que se tornem alvos em caso de conflito. | c | Conforme o **item 1.6 (3º parágrafo da pág. 22)**, a MB não manterá defesa fixa permanente, mas manterá prontidão para retomá-las, exigindo Postura Coercitiva. | | |
+| 35 | Pág 23 | 157 | Para a preservação das Linhas de Comunicações Fluviais na Bacia Amazônica, qual é a importância atribuída ao controle da Foz do Amazonas? | É secundária, visto que a prioridade são os afluentes do alto Amazonas. | É fundamental para garantir a segurança das cidades e localidades da região, exigindo interação com EB e FAB. | É irrelevante, pois a defesa da região depende exclusivamente de vetores aéreos. | É de responsabilidade exclusiva da Polícia Federal, cabendo à Marinha apenas o apoio logístico. | b | Conforme o **item 1.6 (2º parágrafo da pág. 23)**, o controle da Foz do Amazonas é fundamental e exige interações com o EB e FAB para prover o nível de controle adequado. | | |
+| 35 | Pág 24 | 157 | Qual postura específica a Marinha adotará em relação ao Lago da Hidroelétrica de Itaipu, na Bacia Platina? | Postura Cooperativa, focada apenas no apoio às agências de fiscalização ambiental. | Postura Persuasiva, evitando qualquer demonstração de força na região de fronteira. | Postura Coercitiva, privilegiando Capacidades Estratégicas como Poder de Combate e Presença. | Postura de Neutralidade, delegando a segurança da área para a empresa binacional. | c | Conforme o **item 1.6 (3º parágrafo da pág. 24)**, quanto ao Lago da Hidroelétrica de Itaipu, a MB adotará Postura Coercitiva, privilegiando Poder de Combate. | | |
+| 35 | Pág 25 | 157 | No contexto da Busca e Salvamento (SAR), qual é o critério de distância para o emprego prioritário dos meios das Capitanias, Delegacias e Agências? | Até 200 Milhas Náuticas (MN) da costa, cobrindo toda a ZEE. | Até 50 Milhas Náuticas (MN) da costa, visando reduzir o tempo de reação. | Apenas em águas interiores e portos organizados. | Em qualquer distância, desde que haja disponibilidade de combustível. | b | Conforme o **item 1.6 (1º parágrafo da pág. 25)**, tais meios devem reduzir o tempo de reação aos eventos SAR que ocorram até 50 MN de costa. | | |
+| 35 | Pág 26 | 157 | Como o Conceito Estratégico aborda a questão da "Guerra Híbrida"? | Como um conceito obsoleto que não se aplica à realidade geopolítica do Atlântico Sul. | Como uma modalidade onde objetivos nacionais podem ser atacados explorando diversas expressões do Poder Nacional, exigindo aprofundamento da compreensão pela MB. | Como responsabilidade exclusiva das agências de inteligência civis, sem envolvimento da Força Naval. | Como sinônimo de Guerra Cibernética, restrita apenas a ataques a sistemas de computadores. | b | Conforme o **item 1.6 (último parágrafo)**, a Guerra Híbrida é uma modalidade onde objetivos podem ser atacados sem plena consciência, e sua compreensão deve ser aprofundada. | | |
